@@ -1,3 +1,9 @@
+Sat Aug 11 16:27:04 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* jcae-netbeans/src/org/jcae/netbeans/mesh/DecimateAction.java: Fix
+	  org.jcae.mesh.amibe.algos3d.DecimateHalfEdge arguments, they have
+	  been modified in Amibe.
+
 2007-07-19 15:36  Denis Barbier <barbier@users.sourceforge.net>
 
 	* jcae-netbeans/src/org/jcae/netbeans/mesh/BuidOEMMAction.java: Fix 
